<resources>
    <string name="app_name">Mtime</string>
    <string name="action_settings">Settings</string>
    <string name="home">首页</string>
    <string name="buy_ticket">购票</string>
    <string name="shopping_mall">商城</string>
    <string name="find">发现</string>
    <string name="my">我的</string>
    <string name="movie_num">影片数量</string>
    <string name="upcoming">即将上映</string>
    <string name="upcoming_num">数量</string>
    <string name="city_cinema">同城影院</string>
    <string name="city_cinema_num">10家</string>
    <string name="mtime_hot_rank">时光热榜</string>
    <string name="global_box_office">全球票房榜</string>
    <string name="new_movie_notice">新片预告</string>
    <string name="guess_film">猜电影</string>
    <string name="home_search">影片/影人/影院 任你搜</string>
</resources>
